- desk/deskins.c: Code cleanup: eliminate OB_ macros. (RFB)
- aes/gemobjop.c: Removed obaddr() function (no longer required). (RFB)
- aes/geminit.c aes/gemobed.c aes/gemoblib.c aes/gemrslib.c aes/gemshlib.c
  aes/gemsuper.c desk/deskact.c desk/deskdir.c desk/deskinf.c desk/deskins.c
  desk/deskmain.c desk/desksupp.c: Removed #include for taddr.h. (RFB)
- include/taddr.h: Deleted (no longer required). (RFB)

2013-03-03
- bdos/fsfat.c: Rewrote getrealcl() for better performance. Based on a
  idea by Laurent Vogel. (RFB)
- bdos/fsfat.c: Rewrote clfix() for better performance. Based on an idea
  by Laurent Vogel. (RFB)

2013-03-04
- aes/gemdos.c aes/gemgraf.c aes/gemgsxif.c aes/gemgsxif.h aes/geminput.c
  aes/gemmnlib.c aes/gempd.c aes/gemsclib.c aes/gemshlib.c aes/gemshlib.h
  aes/gemwmlib.c aes/gemwrect.c bios/font.c desk/deskgraf.c desk/deskmain.h
  tools/erd.c vdi/vdi_defs.h vdi/vdi_input.c Makefile: Convert remaining K&R
  code to ANSI-C. Contributed by Eero Tamminen. (VRI)
- aes/gemaplib.c aes/gemdisp.c aes/gemdisp.h aes/geminput.c aes/geminput.h
  bios/ide.c include/portab.h: Fixed forkq() prototype. (VRI)
- Makefile: Fix compatibility with GCC 2.95. Contributed by Eero Tamminen. (VRI)
- bdos/fs.h: Make BCB compatible with TOS tools. (RFB)
- util/minicrt.S: Correct misleading usage of STACK_SIZE. (RFB)
- util/boot.c: Convert K&R code to ANSI-C. (RFB)

2013-03-05
- tools/bug.c: Static cleanup. Contributed by Eero Tamminen. (RFB)
- tools/bug.c: Removed unused function try_c_string(). (VRI)
- Makefile bootasm.S: Added new firebee-ram target. (VRI)
- bios/vectors.S: Fixed return value of unimplemented (X)BIOS functions. (VRI)
- aes/gemdos.c aes/gemdos.h aes/geminit.c desk/deskbind.h desk/deskdir.c:
  Allow dos_read()/dos_write() to transfer >64K. (RFB)
- desk/deskbind.h desk/deskdir.c: Improve desktop file copy performance. (RFB)
- tools/bug.c: Generate warning messages for illegal alerts (disabled
  initially). Contributed by Eero Tamminen. (RFB)