@@ -348,9 +348,6 @@ extern  BCB     *bufl[2];              /*  in bios main.c              */
 /* check the drive, see if it needs to be logged in. */
 long ckdrv(int d);
 
-/* allocate storage for and initialize a DMD */
-DMD  *getdmd(int drv);
-
 /* log in media 'b' on drive 'drv'. */
 long log_media(BPB *b, int drv);
 
