@@ -147,7 +147,6 @@ typedef struct _geometry GEOMETRY;
 void blkdev_init(void);
 
 /* general block device functions */
-void blkdev_hdv_init(void);
 LONG blkdev_hdv_boot(void);
 LONG blkdev_getbpb(WORD dev);
 LONG blkdev_rwabs(WORD r_w, LONG adr, WORD numb, WORD first, WORD dev, LONG lfirst);
